Show follow button to term Fix text overflow issue

--- a/assets/css/one-item.scss
+++ b/assets/css/one-item.scss
@@ -44,32 +44,47 @@
     .meta-info {
         display: flex;
         justify-content: space-between;
-    }
-    .meta-info-first {
-        display: flex;
-        justify-content: flex-start;
-    }
-    .meta-info-second::before {
-        content: "From";
-        margin-right: 3px;
-    }
-    .meta-info-second {
-        display: flex;
-    }
-    .pub-date::before {
-        content: "\00b7";
-        margin-left: 2px;
-        margin-right: 2px;
-        color: black;
-    }
-    .pub-date {
-        color: #8999A5;
-    }
-    p.from-subscription {
-        margin-left: 3px;
-    }
-    .meta-info-second p:not(:first-child)::before {
-        content: ", ";
+
+        .meta-info-first {
+            display: flex;
+            justify-content: flex-start;
+            white-space: nowrap;
+            width: 70%;
+
+            .journal {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: calc(100% - 6em);
+            }
+
+            .pub-date {
+                color: #8999A5;
+            }
+
+            .pub-date::before {
+            content: "\00b7";
+            margin-left: 2px;
+            margin-right: 2px;
+            color: black;
+            }
+        }
+        .meta-info-second::before {
+            content: "From";
+            margin-right: 3px;
+        }
+        .meta-info-second {
+            display: flex;
+            width: 25%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .meta-info-second p:not(:first-child)::before {
+            content: ", ";
+        }
+
+        p.from-subscription {
+            margin-left: 3px;
+        }
     }
 }
 
@@ -96,5 +111,17 @@
     }
     .highlight2 {
         color: yellow;
+    }
+}
+
+.term-popover {
+    max-width: 30vw;
+
+    .popover-title {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
     }
 }
